--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  postgres:
+  db:
     image: postgres:17
     container_name: todo_db
     environment:
@@ -8,3 +8,12 @@ services:
       POSTGRES_DB: todo_db
     ports:
       - "6784:5432"
+  db_test:
+    image: postgres:17
+    container_name: todo_test_db
+    environment:
+      POSTGRES_USER: test
+      POSTGRES_PASSWORD: test
+      POSTGRES_DB: todo_test_db
+    ports:
+      - "6785:5432"
